[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/login.gd" type="Script" id=1]
[ext_resource path="res://images/background.png" type="Texture" id=2]
[ext_resource path="res://images/player_red.png" type="Texture" id=3]
[ext_resource path="res://images/player_blue.png" type="Texture" id=4]
[ext_resource path="res://images/player_yellow.png" type="Texture" id=5]
[ext_resource path="res://images/player_green.png" type="Texture" id=6]

[node name="form" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="ui"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -645.112
margin_top = -368.094
margin_right = 1614.89
margin_bottom = 891.906
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo" type="TextureRect" parent="ui"]
margin_left = 250.0
margin_top = 200.0
margin_right = 378.0
margin_bottom = 328.0
rect_rotation = 21.6477
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="logo2" type="TextureRect" parent="ui"]
margin_left = 318.0
margin_top = 153.0
margin_right = 446.0
margin_bottom = 281.0
rect_rotation = 21.6477
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="logo3" type="TextureRect" parent="ui"]
margin_left = 199.0
margin_top = 263.0
margin_right = 327.0
margin_bottom = 391.0
rect_rotation = 21.6477
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 5 )

[node name="logo4" type="TextureRect" parent="ui"]
margin_left = 277.0
margin_top = 253.0
margin_right = 405.0
margin_bottom = 381.0
rect_rotation = 21.6477
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="grid" type="GridContainer" parent="ui"]
margin_left = 420.0
margin_top = 220.0
margin_right = 680.0
margin_bottom = 344.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label_player" type="Label" parent="ui/grid"]
margin_top = 5.0
margin_right = 128.0
margin_bottom = 19.0
rect_min_size = Vector2( 128, 0 )
text = "Player name:"

[node name="text_player" type="LineEdit" parent="ui/grid"]
margin_left = 132.0
margin_right = 260.0
margin_bottom = 24.0
rect_min_size = Vector2( 128, 0 )
text = "Player"

[node name="label_color" type="Label" parent="ui/grid"]
margin_top = 31.0
margin_right = 128.0
margin_bottom = 45.0
text = "Ship Color:"

[node name="input_color" type="OptionButton" parent="ui/grid"]
margin_left = 132.0
margin_top = 28.0
margin_right = 260.0
margin_bottom = 48.0

[node name="label_hostname" type="Label" parent="ui/grid"]
margin_top = 57.0
margin_right = 128.0
margin_bottom = 71.0
text = "Hostname:"

[node name="text_hostname" type="LineEdit" parent="ui/grid"]
margin_left = 132.0
margin_top = 52.0
margin_right = 260.0
margin_bottom = 76.0
rect_min_size = Vector2( 128, 0 )
text = "192.168.10.111"

[node name="label_spacer" type="Label" parent="ui/grid"]
margin_top = 83.0
margin_right = 128.0
margin_bottom = 97.0

[node name="button_login" type="Button" parent="ui/grid"]
margin_left = 132.0
margin_top = 80.0
margin_right = 260.0
margin_bottom = 100.0
text = "Play!"

[node name="label_spacer2" type="Label" parent="ui/grid"]
margin_top = 107.0
margin_right = 128.0
margin_bottom = 121.0

[node name="button_start_server" type="Button" parent="ui/grid"]
margin_left = 132.0
margin_top = 104.0
margin_right = 260.0
margin_bottom = 124.0
text = "Start Server"

[node name="Label" type="Label" parent="ui"]
margin_left = 425.0
margin_top = 386.0
margin_right = 686.0
margin_bottom = 442.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "Use WASD keys to move, SPACEBAR to fire. You will respawn upon death."
autowrap = true
[connection signal="pressed" from="ui/grid/button_login" to="." method="_on_button_login_pressed"]
[connection signal="pressed" from="ui/grid/button_start_server" to="." method="_on_button_start_server_pressed"]
